Implemented the rest the MapChart class, added styles

--- a/index.html
+++ b/index.html
@@ -63,53 +63,53 @@
 			</svg>
 		</div>
 		<div class="map__list">
-			<div class="region-23">Aichi</div>
-			<div class="region-05">Akita</div>
-			<div class="region-02">Aomori</div>
-			<div class="region-12">Chiba</div>
-			<div class="region-38">Ehime</div>
-			<div class="region-18">Fukui</div>
-			<div class="region-40">Fukuoka</div>
-			<div class="region-07">Fukushima</div>
-			<div class="region-21">Gifu</div>
-			<div class="region-10">Gunma</div>
-			<div class="region-28">Hyogo</div>
-			<div class="region-01">Hokkaido</div>
-			<div class="region-34">Hiroshima</div>
-			<div class="region-08">Ibaraki</div>
-			<div class="region-17">Ishikawa</div>
-			<div class="region-03">Iwate</div>
-			<div class="region-39">Kochi</div>
-			<div class="region-37">Kagawa</div>
-			<div class="region-43">Kumamoto</div>
-			<div class="region-14">Kanagawa</div>
-			<div class="region-46">Kagoshima</div>
-			<div class="region-26">Kyoto</div>
-			<div class="region-24">Mie</div>
-			<div class="region-04">Miyagi</div>
-			<div class="region-45">Miyazaki</div>
-			<div class="region-15">Niigata</div>
-			<div class="region-20">Nagano</div>
-			<div class="region-29">Nara</div>
-			<div class="region-42">Nagasaki</div>
-			<div class="region-47">Okinawa</div>
-			<div class="region-27">Osaka</div>
-			<div class="region-33">Okayama</div>
-			<div class="region-44">Oita</div>
-			<div class="region-41">Saga</div>
-			<div class="region-25">Shiga</div>
-			<div class="region-32">Shimane</div>
-			<div class="region-11">Saitama</div>
-			<div class="region-22">Shizuoka</div>
-			<div class="region-09">Tochigi</div>
-			<div class="region-13">Tokyo</div>
-			<div class="region-36">Tokushima</div>
-			<div class="region-31">Tottori</div>
-			<div class="region-16">Toyama</div>
-			<div class="region-30">Wakayama</div>
-			<div class="region-35">Yamaguchi</div>
-			<div class="region-19">Yamanashi</div>
-			<div class="region-06">Yamagata</div>
+			<div class="Aichi">Aichi</div>
+			<div class="Akita">Akita</div>
+			<div class="Aomori">Aomori</div>
+			<div class="Chiba">Chiba</div>
+			<div class="Ehime">Ehime</div>
+			<div class="Fukui">Fukui</div>
+			<div class="Fukuoka">Fukuoka</div>
+			<div class="Fukushima">Fukushima</div>
+			<div class="Gifu">Gifu</div>
+			<div class="Gunma">Gunma</div>
+			<div class="Hyogo">Hyogo</div>
+			<div class="Hokkaido">Hokkaido</div>
+			<div class="Hiroshima">Hiroshima</div>
+			<div class="Ibaraki">Ibaraki</div>
+			<div class="Ishikawa">Ishikawa</div>
+			<div class="Iwate">Iwate</div>
+			<div class="Kochi">Kochi</div>
+			<div class="Kagawa">Kagawa</div>
+			<div class="Kumamoto">Kumamoto</div>
+			<div class="Kanagawa">Kanagawa</div>
+			<div class="Kagoshima">Kagoshima</div>
+			<div class="Kyoto">Kyoto</div>
+			<div class="Mie">Mie</div>
+			<div class="Miyagi">Miyagi</div>
+			<div class="Miyazaki">Miyazaki</div>
+			<div class="Niigata">Niigata</div>
+			<div class="Nagano">Nagano</div>
+			<div class="Nara">Nara</div>
+			<div class="Nagasaki">Nagasaki</div>
+			<div class="Okinawa">Okinawa</div>
+			<div class="Osaka">Osaka</div>
+			<div class="Okayama">Okayama</div>
+			<div class="Oita">Oita</div>
+			<div class="Saga">Saga</div>
+			<div class="Shiga">Shiga</div>
+			<div class="Shimane">Shimane</div>
+			<div class="Saitama">Saitama</div>
+			<div class="Shizuoka">Shizuoka</div>
+			<div class="Tochigi">Tochigi</div>
+			<div class="Tokyo">Tokyo</div>
+			<div class="Tokushima">Tokushima</div>
+			<div class="Tottori">Tottori</div>
+			<div class="Toyama">Toyama</div>
+			<div class="Wakayama">Wakayama</div>
+			<div class="Yamaguchi">Yamaguchi</div>
+			<div class="Yamanashi">Yamanashi</div>
+			<div class="Yamagata">Yamagata</div>
 		</div>
 	</div>
 
